2003-11-08  Kevin Vandersloot

	* configure.in: release 2.5.1

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* configure.in: release gnome-system-monitor 2.5.0

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require libgtop 2.5.0

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fix compilation, lt wasn't committed to CVS

2003-10-07  Žygimantas Beručka  <uid0@tuxfamily.org>

	* configure.in: Added "lt" to ALL_LINGUAS.

2003-09-17  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "ta" (Tamil) to the languages' list.

2003-09-08  Kevin Vandersloot

	* configure.in: release 2.4.0

2003-08-24  Kevin Vandersloot

	* configure.in: release 2.3.1

2003-07-24  Dafydd Harries  <daf@parnassus.ath.cx>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS.

2003-07-13 John Fleck <jfleck@inkstain.net>

	* autogen.sh
	remove:
	* xmldocs.make, omf.make
	update to new docs build system. latest gnome-common
	now required

2003-07-02  Jordi Mallach  <jordi@sindominio.net>

	* gnome-system-monitor.desktop.in: Add Encoding and X-GNOME-Bugzilla
	entries, and fix Terminal.

2003-06-11  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* configure.in: Added "li" to ALL_LINGUAS.

2003-05-29  Paul Duffy <dubhthach@frink.nuigalway.ie>

         * configure.in: Added "ga" to ALL_LINGUAS.

2003-05-06  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "hi" to ALL_LINGUAS.

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-04  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" in ALL_LINGUAS

2003-03-25  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: release 2.3.0

2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-02-24  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-10  Mohammad DAMT  <mdamt@bisnisweb.com>
