@@ -15,9 +15,9 @@ GNOME_COMPILE_WARNINGS
 LIBGNOME_REQUIRED=2.0.0
 LIBGNOMEUI_REQUIRED=2.0.0
 GCONF_REQUIRED=1.1.5
-LIBWNCK_REQUIRED=0.12
-LIBGTOP_REQUIRED=2.5.0
-GTK_REQUIRED=2.0.0
+LIBWNCK_REQUIRED=2.5.0
+LIBGTOP_REQUIRED=2.0.0
+GTK_REQUIRED=2.3.0
 
 PKG_CHECK_MODULES(PROCMAN, libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED gconf-2.0 >= $GCONF_REQUIRED libgtop-2.0 >= $LIBGTOP_REQUIRED libwnck-1.0 >= $LIBWNCK_REQUIRED gtk+-2.0 >= $GTK_REQUIRED)
 
