@@ -32,6 +32,7 @@ enum
 	COL_MEMRES,
 	COL_MEMSHARED,
 	COL_MEMRSS,
+        COL_MEMXSERVER,
 	COL_CPU,
 	COL_NICE,
 	COL_PID,
