@@ -1,3 +1,11 @@
+2003-11-16  Havoc Pennington  <hp@redhat.com>
+
+	* proctable.c: display X Server Memory column, and add it to 
+	the overall Memory column
+
+	* procman.h (struct _ProcInfo): add xserver_bytes field
+	(struct _ProcInfo): add memxserver field
+
 2003-11-14  Kaushal Kumar  <kaushal.kumar@wipro.com>
 
 	* src/callbacks.c (cb_cpu_color_changed), 
