@@ -1,3 +1,7 @@
+2003-11-16  Havoc Pennington  <hp@redhat.com>
+
+	* configure.in: require latest libwnck
+
 2003-11-08  Kevin Vandersloot
 
 	* configure.in: release 2.5.1
